--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -18,7 +20,8 @@
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.13",
     "sass": "^1.51.0",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^2.9.5"
   }
 }
